# virtualization-sdk

./: .bumpversion.cfg  .gitignore  .hooksconfig  .whitesource  404.html  CNAME  CONTRIBUTING.md  README-dev.md  README.md  build.gradle  build.sh  clean.sh  index.html  linkcheck-skip.txt  mkdocs.yml  readme.md  settings.gradle  sitemap.xml
.dependabot/: config.yaml
.github/: CODEOWNERS  dependabot.yml
Getting_Started/: index.html
common/: MANIFEST.in  build.gradle  lock.dev-requirements.txt  lock.requirements.txt  requirements.txt  setup.cfg  setup.py
common/src/main/proto/dlpx/virtualization/: common.proto
common/src/main/python/dlpx/virtualization/common/: VERSION  __init__.py  _common_classes.py  exceptions.py  util.py
common/src/proto/: delphix.proto
common/src/test/java/: NotUsed.java
common/src/test/python/dlpx/virtualization/common/: __init__.py  test_common_classes.py
docs/: .gitignore  .pages  CONTRIBUTING.md  Getting_Started.md  Pipfile  index.md  mkdocs.yml  readme.md
dvp/: MANIFEST.in  README.md  build.gradle  lock.dev-requirements.txt  lock.requirements.txt  requirements.txt  setup.cfg  setup.py
dvp/src/main/python/dlpx/virtualization/: VERSION  __init__.py
dvp/src/test/python/: test_not_used.py
libs/: MANIFEST.in  README.md  build.gradle  lock.dev-requirements.txt  lock.requirements.txt  requirements.txt  (+2 more)
tools/: MANIFEST.in  README-dev.md  build.gradle  lock.dev-requirements.txt  lock.requirements.txt  requirements.txt  setup.cfg  setup.py
tools/src/main/python/dlpx/virtualization/_internal/: VERSION  __main__.py  cli.py  click_util.py  codegen.py  const.py  delphix_client.py  exceptions.py  file_util.py  logging_util.py  package_util.py  plugin_dependency_util.py  plugin_importer.py  plugin_util.py  plugin_validator.py  schema_validator.py  settings.cfg  util_classes.py
tools/src/main/python/dlpx/virtualization/_internal/codegen/: codegen-config.json
tools/src/main/python/dlpx/virtualization/_internal/codegen/templates/: __init__model.mustache  base_model_.mustache  model.mustache  util.mustache
tools/src/main/python/dlpx/virtualization/_internal/commands/: build.py  compile.py  download_logs.py  initialize.py  newbuild.py  upload.py
tools/src/main/python/dlpx/virtualization/_internal/commands/plugin_template/: direct_operations.py.template  entry_point.py.template  entry_point_template.py  schema_template.json  staged_operations.py.template
tools/src/main/python/dlpx/virtualization/_internal/validation_schemas/: plugin_config_schema.json  plugin_config_schema_no_id_validation.json  plugin_importer.yaml  plugin_schema.json
tools/src/test/python/dlpx/virtualization/_internal/: conftest.py  engine_version.cfg  test_cli.py  test_click_util.py  test_file_util.py  test_logging_util.py  test_package_util.py  test_plugin_dependency_util.py  test_plugin_importer.py  test_plugin_validator.py  test_schema_validator.py
tools/src/test/python/dlpx/virtualization/_internal/commands/: conftest.py  test_build.py  test_codegen.py  test_compile.py  test_delphix_client.py  test_download_logs.py  test_initialize.py  test_templates.py  test_upload.py
tools/src/test/python/dlpx/virtualization/_internal/fake_plugin/direct/: arbitrary_error.py  bad_syntax.py  dec_not_function.py  id_bad_format.py  id_not_string.py  id_used.py  import_error.py  lua_id_bad_format.py  lua_id_not_string.py  lua_id_used.py  multiple_warnings.py  op_already_defined.py  plugin_config.yml  schema.json  successful.py  undefined_name.py  upgrade_warnings.py
tools/src/test/python/dlpx/virtualization/_internal/fake_plugin/direct/src/: python_vfiles.py
tools/src/test/python/dlpx/virtualization/_internal/fake_plugin/staged/: multiple_warnings.py  plugin_config.yml  schema.json  successful.py
tools/src/test/python/dlpx/virtualization/_internal/fake_plugin/staged/src/: python_staged.py
tools/src/virtualization/: __init__.py
tools/src/virtualization/_internal/: __init__.py  cli.py  logging_util.py  package_util.py
tools/test/virtualization/_internal/: test_cli.py  test_cli_execution.py  test_click_util.py  test_logging_util.py  test_package_util.py
(+349 files in other folders)
