#
# Copyright (c) 2019, 2021 by Delphix. All rights reserved.
#

[metadata]
metadata_version: 1.2
author: Delphix
author_email: virtualization-plugins@delphix.com
home_page: https://developer.delphix.com
long_description: file: README.md
long_description_content_type: text/markdown
classifiers:
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
requires_python: >=2.7, <=3.8, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*, !=3.7.*
