#
# Copyright (c) 2019 by Delphix. All rights reserved.
#

[metadata]
Metadata-Version: 1.2
Author: Delphix
Author-email: virtualization-plugins@delphix.com
Home-page: https://developer.delphix.com
Summary: Delphix Virtualization Platform SDK
Long-description: file: README.md
Long-description-content-type: text/markdown
Keywords: virtualization plugin
Classifiers:
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
Requires-Python: 2.7
