#
# Copyright (c) 2019, 2021 by Delphix. All rights reserved.
#

[metadata]
metadata_version: 1.2
author: Delphix
author_email: virtualization-plugins@delphix.com
home_page: https://developer.delphix.com
summary: Delphix Virtualization Platform SDK
long_description: file: README.md
long_description_content_type: text/markdown
keywords: virtualization plugin
classifiers:
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
requires_python: >=3.11, <3.12
