#
# Copyright (c) 2019 by Delphix. All rights reserved.
#

[metadata]
Metadata-Version: 1.2
Author: Delphix
Author-email: virtualization-plugins@delphix.com
Home-page: https://developer.delphix.com
Summary: Delphix Virtualization SDK Tools
Long-description: file: README.md
Long-description-content-type: text/markdown
Classifiers:
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
Requires-Python: 2.7

[options.entry_points]
console_scripts =
    dvp = dlpx.virtualization._internal.cli:delphix_sdk
